Added Launcher screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="flowers_not_yet_saved">Flowers not yet saved</string>
     <string name="see_all">See All</string>
     <string name="my_saved_flowers">My saved flowers</string>
+    <string name="logo">Flower App Logo\n</string>
 </resources>
